feat: :sparkles: add update phone number handler
