# apiv2/requests/requests.go
@@ -5,6 +5,9 @@ type DiagnosisRequest struct {
 	Prompt string `json:"promtp"`
 }
 
+type UpdatePhoneNumberRequest struct {
+	PhoneNumber string `json:"phone_number"`
+}
 type SigninRequest struct {
 	Email    string `json:"email"`
 	Password string `json:"password"`
